t+gl:[[cocho]] ([[WT:EDIT|Assisted]]) <pig#42804362>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -382,6 +382,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Dutch: {{t+|nl|zwijn|n}}, {{t+|nl|smeerlap|m}}
 * Finnish: {{t+|fi|sika}}
 * French: {{t+|fr|salaud|m}}, {{t+|fr|cochon|m}}, {{t+|fr|porc|m}}
+* Galician: {{t+|gl|cocho|m}}
 * German: {{t+|de|Schwein|n}}
 * Greek: {{t+|el|γουρούνι|n}}
 * Icelandic: {{t+|is|svín|n}}
