t+chp:[[ną́bį]] t-balance ([[WT:EDIT|Assisted]]) <otter#42824798>

--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -51,6 +51,7 @@ From {{inh|en|enm|oter}}, {{m|enm|otir}}, {{m|enm|otur}}, {{m|enm|otyre}}, from 
 * Cherokee: {{t|chr|ᏥᏯ|tr=tsiya}}
 * Chinese:
 *: Mandarin: {{t+|cmn|水獺|sc=Hani}}, {{t+|cmn|水獭|tr=shuǐtǎ|sc=Hani}}
+* Chipewyan: {{t|chp|ną́bį}}
 * Czech: {{t+|cs|vydra|f}}
 * Danish: {{t+|da|odder|c}}
 * Dutch: {{t+|nl|otter|m}}
@@ -86,10 +87,10 @@ From {{inh|en|enm|oter}}, {{m|enm|otir}}, {{m|enm|otur}}, {{m|enm|otyre}}, from 
 * Latvian: {{t|lv|ūdrs|m}}
 * Lithuanian: {{t+|lt|ūdra|f}}
 * Lun Bawang: {{t|lnd|dengen}}
+{{trans-mid}}
 * Macedonian: {{t|mk|видра|f}}
 * Malay: {{t|ms|anjing air}}, {{t|ms|berang-berang}}
 *: Jawi: {{t|ms|انجيڠ اءير|sc=Arab}}, {{t|ms|برڠ٢|sc=Arab}}
-{{trans-mid}}
 * Maltese: {{t|mt|lutra}}
 * Manx: {{t|gv|dooarchoo|m}}, {{t|gv|moddey ushtey|m}}
 * Mi'kmaq: {{t|mic|giwnig|an}}
