--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -87,7 +87,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken||to croak like a frog; make a noise
 <references/>
 
 ===Etymology 2===
-{{clipping|lang=en|quacksalver|nocap=1}}, from {{der|en|dum|kwaksalver||hawker of salve}} (modern {{cog|nl|kwakzalver}}), from {{m|dum|quacken||to brag, boast; to croak}}.
+{{clipping|lang=en|quacksalver}}, from {{der|en|dum|kwaksalver||hawker of salve}} (modern {{cog|nl|kwakzalver}}), from {{m|dum|quacken||to brag, boast; to croak}}.
 
 ====Noun====
 {{en-noun}}
