--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -92,7 +92,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken||to croak like a frog; make a noise
 ====Noun====
 {{en-noun}}
 
-# {{senseid|doctor}} A [[fraudulent]] [[healer]] or [[incompetent]] [[professional]], especially a [[doctor#Noun|doctor]] of [[medicine]]; an [[impostor]] who claims to have [[qualification]]s to [[practice#Verb|practice]] medicine. {{defdate|from ''c.'' 1630}}
+# {{senseid|en|doctor}} A [[fraudulent]] [[healer]] or [[incompetent]] [[professional]], especially a [[doctor#Noun|doctor]] of [[medicine]]; an [[impostor]] who claims to have [[qualification]]s to [[practice#Verb|practice]] medicine. {{defdate|from ''c.'' 1630}}
 #*: {{ux|en|That doctor is nothing but a lousy '''quack'''!}}
 #* '''1662''', ''Rump: or an Exact Collection of the Choycest Poems and Songs Relating to Late Times, Vol. II'', by ‘the most Eminent Wits’
 #*: Tis hard to say, how much these Arse-wormes do urge us, We now need no '''Quack''' but these Jacks for to purge us, [...]
