--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -41,17 +41,22 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 # {{non-gloss definition|Indicates a position on a scale or in a series.}}
 #: {{ux|en|Sell '''at''' 90.&emsp; {{nowrap|Tiger finished the round '''at''' tenth, seven strokes behind the leaders.}}&emsp; {{nowrap|I'm offering it&mdash;just to select customers&mdash;'''at''' cost.}}}}
 # Because of.
-#: {{ux|en|to laugh '''at''' a joke}}
+#: {{ux|en|to laugh '''at''' a joke &nbsp; mad '''at''' their comments}}
+# {{n-g|Indicates a means, method, or manner.}}
+#* '''1995''', Richard Klein, ''Cigarettes are Sublime'' (ISBN 0822316412), page 41:
+#*: [...] to be sold '''at''' auction for sixty gold francs.
+#* '''2012''', Sami Moubayed, ''Syria and the USA: Washington's Relations with Damascus'' (ISBN 0857730673):
+#*: A few days later, on 1 October, King Hussein opened the Jordanian Parliament by speaking '''at''' length about the crisis in Syria, 
 # Holding a given [[speed]] or [[rate#English|rate]].
 #: {{ux|en|It is growing '''at''' the rate of 3% a year.&emsp; {{nowrap|Cruising along '''at''' fifty miles per hour.}}}}
-# {{lb|en|Ireland|stressed pronunciation}} bothering, irritating, causing discomfort to
+# {{lb|en|used for skills or areas of knowledge}} On the [[subject]] of; [[regarding]].
+#: ''She studied '''at''' her chemistry notes.''
+#: ''He slipped '''at''' marksmanship over his extended vacation.''
+# {{lb|en|Ireland|stressed pronunciation}} Bothering, irritating, causing discomfort to
 #* '''1995''' Keith Wood, quoted in David Hughes, "[http://www.independent.co.uk/sport/rugby-union-wood-oddson-to-take-one-against-the-head-1568622.html Wood odds-on to take one against the head]", in ''The Independent'' (London) 18 January:
 #*: I think `Jesus, my back is '''at''' me'. Then I get the ball. Off you go for 10 yards and you don't feel a thing. Then you stop and think: `Jesus, it's '''at''' me again'[.]
 #* '''2014''' Marian Keyes "[http://www.mariankeyes.com/newsletter/January2014-2?forumboardid=26&forumtopicid=26 Antarctic Diary - Part 2]" personal website (January 2014):
 #*: He seems to be saying. “Ah, go on, you’re making the other lads feel bad.” But the 4th fella says, “No. Don’t be '''‘at’''' me. I’m just not in the form right now, I’ll stay where I am, thanks.”
-# {{lb|en|used for skills or areas of knowledge}} On the [[subject]] of; [[regarding]].
-#: ''She studied '''at''' her chemistry notes.''
-#: ''He slipped '''at''' marksmanship over his extended vacation.''
 
 =====Usage notes=====
 * ''He threw the ball to me'' &mdash; (so I could catch it).
