--- a/en/a/abandono.4114.wikitext
+++ b/en/a/abandono.4114.wikitext
@@ -96,6 +96,9 @@
 
 ==Spanish==
 
+===Pronunciation===
+* {{es-IPA}}
+
 ===Noun===
 {{es-noun|m}}
 
@@ -108,33 +111,3 @@
 
 ====External links====
 * {{R:DRAE 2001}}
-
-[[ca:abandono]]
-[[cs:abandono]]
-[[co:abandono]]
-[[de:abandono]]
-[[et:abandono]]
-[[es:abandono]]
-[[fr:abandono]]
-[[gl:abandono]]
-[[ko:abandono]]
-[[io:abandono]]
-[[id:abandono]]
-[[ia:abandono]]
-[[it:abandono]]
-[[ky:abandono]]
-[[lt:abandono]]
-[[li:abandono]]
-[[mg:abandono]]
-[[nl:abandono]]
-[[ja:abandono]]
-[[no:abandono]]
-[[pl:abandono]]
-[[pt:abandono]]
-[[ru:abandono]]
-[[fi:abandono]]
-[[sv:abandono]]
-[[ta:abandono]]
-[[tg:abandono]]
-[[chr:abandono]]
-[[zh:abandono]]
