--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -199,7 +199,7 @@ From {{inh|en|enm|*quacken}}, {{m|enm|queken||to croak like a frog; make a noise
 ====Adjective====
 {{en-adj|-}}
 
-# Falsely presented as having [[medicinal]] [[power#Noun|powers]].
+# {{rfd-sense|lang=en}} Falsely presented as having [[medicinal]] [[power#Noun|powers]].
 #: {{ux|en|Don't get your hopes up; that's '''quack''' medicine!}}
 
 =====Translations=====
