--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -268,7 +268,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 ==Azeri==
 
 ===Etymology===
-From {{der|az|otk||tr=at|t=horse}}, from {{inh|az|trk-pro|*at}} {{m|trk-pro|*ăt||horse}}.
+From {{der|az|otk||tr=at|t=horse}}, from {{inh|az|trk-pro|}}.
 
 ===Noun===
 {{az-variant|c=ат|r=at|a=آت}}
