rfex for food sense <what's good#42868482>

--- a/en/w/what's good.801534.wikitext
+++ b/en/w/what's good.801534.wikitext
@@ -3,7 +3,7 @@
 ===Phrase===
 {{head|en|phrase|head=[[what]][['s]] [[good]]}}
 
-# {{lb|en|colloquial}} [[what]] [[is]] [[good]], especially in reference to food.
+# {{lb|en|colloquial}} [[what]] [[is]] [[good]], especially in reference to food. {{rfex|lang=en}}
 # {{lb|en|slang}} [[what's up]]
 
 ====Translations====
