--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -227,7 +227,7 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 ==Albanian==
 
 ===Etymology===
-From {{etyl|sqj-pro|sq}} {{m|sqj-pro|*bind-}}, from {{etyl|ine-pro|sq}} {{m|ine-pro|*bʰeydʰ-}} 'to persuade, encourage; constrain'. Cognate to Ancient Greek {{m|grc|πείθω||to persuade, convince}}<ref> Albanische Etymologien (Untersuchungen zum albanischen Erbwortschatz), Bardhyl Demiraj, Leiden Studies in Indo-European 7; Amsterdam - Atlanta 1997, p.101</ref>, Illyrian {{m|xil|Bindus||Illyrian Neptune}} and Thracian {{m|xth|Bithus||theonym}}.
+From {{etyl|sqj-pro|sq}} {{m|sqj-pro|*bind-}}, from {{etyl|ine-pro|sq}} {{m|ine-pro|*bʰeydʰ-}} 'to persuade, encourage; constrain'. Cognate to Ancient Greek {{m|grc|πείθω||to persuade, convince}}<ref> Albanische Etymologien (Untersuchungen zum albanischen Erbwortschatz), Bardhyl Demiraj, Leiden Studies in Indo-European 7; Amsterdam - Atlanta 1997, p.101</ref>, Illyrian {{m|xil|*Bindus||Illyrian Neptune}} and Thracian {{m|xth|Bithus||theonym}}.
 
 ===Verb===
 {{sq-verb|binda|bindur}}
