--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -65,6 +65,7 @@ From {{prefix|anarcho|capitalism|lang=en}}. Coined by {{w|Murray Rothbard}}.
 
 [[Category:en:Politics]]
 [[Category:en:Anarchism]]
+[[Category:en:Capitalism]]
 
 [[fr:anarcho-capitalism]]
 [[io:anarcho-capitalism]]
