--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -7,7 +7,7 @@
 * {{rhymes|ʊk|lang=en}}
 
 ===Etymology 1===
-From {{etyl|enm|en}} {{m|enm|croke}}, {{m|enm|crok}}, from {{etyl|ang|en}} *{{m|ang||crōc|hook, bend, crook}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*krōkaz||bend, hook}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*greg-||tracery, basket, bend}}. Cognate with {{cog|nl|kreuk||a bend, fold, wrinkle}}, {{cog|gml|kroke}}, {{m|gml|krake||fold, wrinkle}}, {{cog|da|krog||crook, hook}}, {{cog|sv|krok||crook, hook}}, {{cog|is|krókur||hook}}.
+From {{inh|en|enm|croke}}, {{m|enm|crok}}, from {{inh|en|ang|*crōc|t=hook, bend, crook}}, from {{inh|en|gem-pro|*krōkaz||bend, hook}}, from {{der|en|ine-pro|*greg-||tracery, basket, bend}}. Cognate with {{cog|nl|kreuk||a bend, fold, wrinkle}}, {{cog|gml|kroke}}, {{m|gml|krake||fold, wrinkle}}, {{cog|da|krog||crook, hook}}, {{cog|sv|krok||crook, hook}}, {{cog|is|krókur||hook}}.
 
 ====Noun====
 {{en-noun}}
