--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -6,7 +6,7 @@
 * {{rhymes|æk|lang=en}}
 
 ===Etymology 1===
-From {{inh|en|enm|*quacken}}, {{m|enm|queken||to croak like a frog; make a noise like a duck, goose, or quail}}, from {{m|enm|quack}}, {{m|enm|qwacke}}, {{m|enm|quek}}, {{m|enm|queke||quack|pos=interjection and noun}}, also {{m|enm|kek}}, {{m|enm|keke}}, {{m|enm|whec-}}, partly of imitative origin and partly from {{der|en|dum|quacken||to croak, quack}}, from {{der|en|odt|*kwaken|to croak, quack}}, from {{der|en|gem-pro|*kwakaną}}, {{m|gem-pro|*kwakōną||to croak}}, of imitative origin.<ref>Robert E. Lewis, ''Middle English dictionary, Volume 8'', queke.</ref> Cognate with {{cog|stq|kwoakje}}, {{m|stq|kwaakje||to quack}}, {{cog|gml|quaken||to quack, croak}}, {{cog|de|quaken||to quack, croak}}, {{cog|da|kvække||to croak}}, {{cog|sv|kväka||to croak, quackle}}, {{cog|no|kvekke||to croak}}, {{cog|is|kvaka||to twitter, chirp}}.
+From {{inh|en|enm|*quacken}}, {{m|enm|queken||to croak like a frog; make a noise like a duck, goose, or quail}}, from {{m|enm|quack}}, {{m|enm|qwacke}}, {{m|enm|quek}}, {{m|enm|queke||quack|pos=interjection and noun}}, also {{m|enm|kek}}, {{m|enm|keke}}, {{m|enm|whec-}}, partly of imitative origin and partly from {{der|en|dum|quacken||to croak, quack}}, from {{der|en|odt|*kwaken|t=to croak, quack}}, from {{der|en|gem-pro|*kwakaną}}, {{m|gem-pro|*kwakōną||to croak}}, of imitative origin.<ref>Robert E. Lewis, ''Middle English dictionary, Volume 8'', queke.</ref> Cognate with {{cog|stq|kwoakje}}, {{m|stq|kwaakje||to quack}}, {{cog|gml|quaken||to quack, croak}}, {{cog|de|quaken||to quack, croak}}, {{cog|da|kvække||to croak}}, {{cog|sv|kväka||to croak, quackle}}, {{cog|no|kvekke||to croak}}, {{cog|is|kvaka||to twitter, chirp}}.
 
 ====Noun====
 {{en-noun}}
