--- a/en/n/no kidding.742290.wikitext
+++ b/en/n/no kidding.742290.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Interjection===
-{{en-interj|head=[[no]] [[kidding]]!}}
+{{en-interj}}
 
 # {{lb|en|colloquial}} An exclamation of [[amazement]].
 # {{lb|en|colloquial|sarcastic}} Said in response to an [[obvious]] statement.
