/* Declension */ more fluent word use <rot#42989704>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -245,10 +245,10 @@ From {{inh|de|gmh|rōt||red, red-haired}}, from {{inh|de|goh|rōt||red, scarlet,
 # {{lb|de|historical|possibly offensive}} [[redskin]]; [[Native American]]; [[Indian]]
 
 ====Declension====
-; Comparation with umlaut
+; Comparative forms with umlaut
 {{de-decl-adj|rot|röter|rötest}}
 
-; Comparation without umlaut
+; Comparative forms without umlaut
 {{de-decl-adj|rot|roter|rotest}}
 
 ====Synonyms====
