--- a/en/w/wassen.4471.wikitext
+++ b/en/w/wassen.4471.wikitext
@@ -5,7 +5,7 @@
 * {{audio|Nl-wassen.ogg|audio|lang=nl}}
 
 ===Etymology 1===
-From {{inh|nl|dum|wasschen}}, from {{inh|nl|odt|waskan}}, from {{inh|nl|gem-pro|*waskaną||to wash, make wet}}, ultimately from {{der|nl|ine-pro|*wed-||water, wet}}.
+From {{inh|nl|dum|wasschen}}, from {{inh|nl|odt|waskan}}, from {{inh|nl|gem-pro|*waskaną}}, ultimately from {{der|nl|ine-pro|*wed-||water, wet}}.
 
 ====Verb====
 {{nl-verb}}
