--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -247,6 +247,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Finnish: {{t|fi|viheltää}}
 * French: {{t+|fr|siffler}}
 * Friulian: {{t|fur|šivîlâ}}
+* Georgian: {{t-needed|ka}}
 * German: {{t+|de|pfeifen}}, {{t+|de|flöten}}
 * Greek: {{t+|el|σφυρίζω}}
 * Hungarian: {{t+|hu|fütyül}}
