--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -1,5 +1,4 @@
 {{also|Weight}}
-
 ==English==
 {{wikipedia|dab=weight (disambiguation)|weight}}
 
@@ -51,6 +50,9 @@ Cognate with Scots {{m|sco|wecht}}, {{m|sco|weicht||weight}}, Saterland Frisian 
 # The [[resistance]] against which a [[machine]] acts, as opposed to the power which moves it.
 # {{lb|en|slang|uncountable}} Shipments of (often illegal) drugs.
 #: ''He was pushing '''weight'''.''
+
+====Alternative forms====
+* {{l|en|wt.}} {{q|abbreviation}}
 
 ====Derived terms====
 {{der3|lang=en
