--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -54,6 +54,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 * Serbo-Croatian: {{t|sh|нинтендо}}
 * Spanish: {{t|es|Nintendo}}
 * Thai: {{t|th|นินเทนโด|tr=Ninthendo}}
+* Uyghur: {{t|ug|نىنتېندو}}
 * Vietnamese: {{t-needed|vi}}
 {{trans-bottom}}
 
