--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -205,7 +205,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Interlingua: {{t|ia|porco}}
 * Irish: {{t+|ga|muc|f}}
 * Italian: {{t+|it|maiale|m}}, {{t+|it|porco|m}}, {{t+|it|suino|m}}
-* Japanese: {{t+|ja|豚|tr=[[ぶた]], buta}}, {{t+|ja|ブタ|tr=buta|sc=Jpan}}
+* Japanese: {{t+|ja|豚|tr=ぶた, buta}}, {{t+|ja|ブタ|tr=buta|sc=Jpan}}
 * Javanese: {{t+|jv|babi}}
 * Kabardian: {{t|kbd|кхъуэ}}
 * Kannada: {{t+|kn|ಹಂದಿ|sc=Knda}}
