--- a/en/p/puit.801598.wikitext
+++ b/en/p/puit.801598.wikitext
@@ -5,7 +5,7 @@
 * {{audio|Nl-puit.ogg|Audio|lang=nl}}
 
 ===Etymology===
-From {{inh|nl|dum|puut||frog}}, from {{inh|nl|gem-pro|*put-}}, {{m|gem-pro|*pud-||to swell}}. Compare dialectal English {{m|en|pod||belly}}, {{m|en|pout}}, Swedish {{m|sv|puta||to pout}}. Akin to French {{m|fr|bouder}}.
+From {{inh|nl|dum|puut||frog}}, from {{inh|nl|gem-pro|[[*put-]], [[*pud-]]||to swell}}. Compare dialectal English {{m|en|pod||belly}}, {{m|en|pout}}, Swedish {{m|sv|puta||to pout}}. Akin to French {{m|fr|bouder}}.
 
 ===Noun===
 {{nl-noun|m|-en|puitje}}
