--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -58,6 +58,7 @@ From {{m|en|bend}}.
 {{trans-mid}}
 * Korean: {{t|ko|굽은|sc=Kore}}
 * Kyrgyz: {{t+|ky|шык}}, {{t+|ky|шыктуулук}}, {{t+|ky|адат}}, {{t+|ky|өнөкөт}}, {{t+|ky|ынта}}, {{t+|ky|кунт}}, {{t+|ky|умтулуу}}, {{t+|ky|тырышуу}}, {{t+|ky|ийри-буйру}}, {{t+|ky|бурулуш}}, {{t+|ky|кайрылыш}}, {{t|ky|ийретүү}}, {{t|ky|ийрейүү}}, {{t+|ky|кыйшайуу}}, {{t+|ky|эңкейиш}}, {{t+|ky|бүкчүйгөн}}, {{t+|ky|бүкчүйгөн}}, {{t+|ky|жантайма}}, {{t+|ky|кыйшык}}, {{t+|ky|ийилген}}, {{t+|ky|умтулган}}, {{t+|ky|тилек}}, {{t+|ky|ынтызарлык}}, {{t+|ky|куштарлык}}, {{t+|ky|чабынды}}, {{t+|ky|шалбаа}}, {{t+|ky|талаа}}, {{t+|ky|муундуу}}, {{t+|ky|муунактуу}}
+* Maori: {{t|mi|rōiho}} {{qualifier|of an old person}}
 * Mongolian: {{t-needed|mn}}
 * Portuguese: {{t+|pt|torto}}
 * Romanian: {{t+|ro|gârbov}}, {{t+|ro|îndoit}}
