--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -5,7 +5,7 @@
 {{bor|en|frm|-}}, from {{der|en|fro|multiplicacion}}, from {{der|en|la|multiplicatio|multiplicatio, multiplicationem}}.
 
 ===Pronunciation===
-* {{a|US}} {{IPA|/ˌmʌltəplɪˈkeɪʃən/|[ˌmʌltɪ̈plɪˈkʰeɪ̯ʃ(ɪ̈)n]|lang=en}}
+* {{IPA|/ˌmʌltɪplɪˈkeɪʃən/|lang=en}}
 * {{rhymes|eɪʃən|lang=en}}
 
 ===Noun===
