t+ro:[[jurământ]] ([[WT:EDIT|Assisted]]) <pledge#43117870>

--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -125,7 +125,7 @@ From {{etyl|enm|en}} {{m|enm|plege}}, from {{etyl|xno|en}} {{m|fro|plege}}, from
 * Occitan: {{t|oc|promessa|f}}, {{t+|oc|jurament|m}}
 * Polish: {{t+|pl|obietnica|f}}
 * Portuguese: {{t+|pt|promessa|f}}, {{t+|pt|penhor|m}}
-* Romanian: {{t+|ro|legământ}}, {{t+|ro|promisiune}} (''fermă'')
+* Romanian: {{t+|ro|legământ}}, {{t+|ro|promisiune}} (''fermă''), {{t+|ro|jurământ}}
 * Russian: {{t+|ru|обе́т|m}}, {{t+|ru|обеща́ние|n}}, {{t+|ru|заро́к|m}}
 * Scottish Gaelic: {{t|gd|gealltanas|m}}
 * Serbo-Croatian:
