--- a/en/b/breathability.856220.wikitext
+++ b/en/b/breathability.856220.wikitext
@@ -25,7 +25,7 @@
 * Chinese: 
 *: Mandarin: {{t|cmn|[[空氣]][[質量]]}}, {{t|cmn|[[空气]][[质量]]|tr=kōngqì zhìliàng}}
 {{trans-mid}}
-* Finnish: {{t|fi|hengitettävyys}}
+* Finnish: {{t|fi|hengityskelpoisuus}}
 * Spanish: {{t-needed|es}}
 {{trans-bottom}}
 
