t+mi:[[hautau]] ([[WT:EDIT|Assisted]]) <fraction#43415221>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -79,6 +79,7 @@ From {{etyl|enm|en}} {{m|enm|fraccioun||a breaking}}, from {{etyl|xno|en}}, from
 * Latvian: {{t|lv|daļskaitlis|m}}
 {{trans-mid}}
 * Macedonian: {{t|mk|дел|m|tr=del}}, {{t|mk|делче|n|tr=délče}}
+* Maori: {{t|mi|hautau}}
 * Norwegian: {{t|no|andel|m}}, {{t+|no|brøkdel|m}}
 * Polish: {{t+|pl|ułamek|m}}, {{t+|pl|cząstka|f}}
 * Portuguese: {{qualifier|Brazil}} [[fração]] {{g|f}}, {{qualifier|Portugal}} [[fracção]] {{g|f}}
