t+ga:[[an Tras-dnístiria]] ([[WT:EDIT|Assisted]]) <Transnistria#44652997>

--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -45,6 +45,7 @@ Literally "beyond the river [[Dniester]]". {{etystub|lang=en}}
 * Hungarian: {{t|hu|Dnyeszter-mellék}}, {{t|hu|Transznisztria}}
 * Indonesian: {{t|id|Transnistria}}
 {{trans-mid}}
+* Irish: {{t|ga|an Tras-dnístiria|f}}
 * Italian: {{t|it|Transnistria|f}}
 * Japanese: {{t|ja|沿ドニエストル共和国|tr=えんドニエストルきょうわこく, en-Doniesutoru kyōwakoku}}, {{t|ja|沿ドニエストル|tr=En-Doniesutoru|sc=Jpan}}
 * Korean: {{t+|ko|트란스니스트리아|tr=Teuranseuniseuteuria|sc=Hang}}
