t+da:[[byde]] ([[WT:EDIT|Assisted]]) <bid#44814635>

--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -93,6 +93,7 @@ From {{etyl|enm|en}} {{m|enm|beden}}, from the {{etyl|ang|en}} verb {{m|ang|bēo
 {{trans-top|intransitive: to make an offer}}
 * Chinese:
 *: Mandarin: {{t+|cmn|出價|sc=Hani}}, {{t+|cmn|出价|tr=chūjià|sc=Hani}}, {{t+|cmn|投標|sc=Hani}}, {{t+|cmn|投标|tr=tóubiāo|sc=Hani}}
+* Danish: {{t|da|byde}}
 * Dutch: {{t+|nl|bieden}}
 * Finnish: {{t+|fi|tarjota}}, {{t|fi|tehdä tarjous}}
 * French: {{t|fr|faire une enchère}} (at auction)
