--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -14,7 +14,7 @@ From {{etyl|la|en}} {{m|la|minimum}}, neuter form of {{m|la|minimus||least, smal
 
 # The [[lowest]] [[limit]].
 #: ''We prefer candidates with a '''minimum''' of 4 years experience in the field.''
-#: ''We need a '''minimum''' of 3 fully-qualified staff members on duty at all time.''
+#: ''We need a '''minimum''' of three staff members on duty at all time.''
 # The [[smallest]] [[amount]].
 #: ''He always tries to get away with doing the '''minimum'''.''
 #: ''Please keep noise to a '''minimum''' after 11 o'clock''
