--- a/en/u/unflappability.742225.wikitext
+++ b/en/u/unflappability.742225.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{suffix|en|unflappable|ity}}, rather than {{prefix|en|un|flappability}}, which is probably a [[back-formation]] from this word.
+From {{suffix|en|unflappable|ity}} (rather than {{prefix|en|un|flappability}}, which is probably a [[back-formation]] from this word.)
 
 ===Noun===
 {{en-noun|-}}
