--- a/en/r/reaffirmation.741520.wikitext
+++ b/en/r/reaffirmation.741520.wikitext
@@ -1,7 +1,10 @@
 {{also|réaffirmation}}
-
 ==English==
+
+===Etymology===
+{{prefix|en|re|affirmation}}
 
 ===Noun===
 {{en-noun}}
+
 # An act of [[reaffirm]]ing; a second or subsequent [[affirmation]].
