--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -142,6 +142,7 @@
 * Esperanto: {{t|eo|divido}}
 * Finnish: {{t+|fi|jako}}, {{t+|fi|jakaminen}}
 * French: {{t+|fr|division|f}}
+* Georgian: {{t|ka|გაყოფა}}
 * German: {{t+|de|Division|f}}
 * Greek: {{t+|el|διαίρεση|f}}
 * Hebrew: {{t|he|חילוק|m|tr=ḥilúq|sc=Hebr}}
@@ -182,6 +183,7 @@
 * Dutch: {{t+|nl|deling|f}}, {{t+|nl|staartdeling|f}}
 * Finnish: {{t+|fi|jakolasku}}
 * French: {{t+|fr|division|f}}
+* Georgian: {{t|ka|გაყოფა}}
 * Greek: {{t+|el|διαίρεση|f}}
 * Kurdish:
 *: Sorani: {{t|ckb|دابەش|tr=dabeş}}
