--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -214,6 +214,7 @@
 * Esperanto: {{t|eo|divizio}}
 * Finnish: {{t+|fi|divisioona}}
 * French: {{t+|fr|division|f}}
+* Georgian: {{t|ka|დანაყოფი}}, {{t|ka|დივიზია}}
 * German: {{t+|de|Abteilung|f}}, {{t+|de|Division|f}}
 * Greek: {{t+|el|μεραρχία|f}}
 * Hebrew: {{t|he|אוגדה|f|tr=ugdá|sc=Hebr}}
