--- a/en/f/fung.803241.wikitext
+++ b/en/f/fung.803241.wikitext
@@ -1,9 +1,8 @@
 {{also|fung.|-fung-}}
-
 ==English==
 
 ===Etymology===
-Anglicization of ''[[fungus]]''.
+Anglicization of {{m|en|fungus}}.
 
 ===Noun===
 {{en-noun}}
