t+uk:[[віднімання]] ([[WT:EDIT|Assisted]]) <subtraction#45950695>

--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -55,6 +55,7 @@
 * Tagalog: {{t|tl|palabawasan}}
 * Telugu: {{t+|te|తీసివేత|tr=teesiveata|sc=Telu}}
 * Turkish: {{t+|tr|çıkarma}}, {{t|tr|çıkarma işlemi}}
+* Ukrainian: {{t|uk|відніма́ння}}
 {{trans-bottom}}
 
 {{trans-top|calculation}}
@@ -78,6 +79,7 @@
 * Tagalog: {{t|tl|palabawasan}}
 * Telugu: {{t+|te|తీసివేత|tr=teesiveata|sc=Telu}}
 * Turkish: {{t|tr|çıkarma işlemi}}
+* Ukrainian: {{t|uk|відніма́ння}}
 {{trans-bottom}}
 
 ====Related terms====
