--- a/en/f/four score and seven years ago.803552.wikitext
+++ b/en/f/four score and seven years ago.803552.wikitext
@@ -2,8 +2,7 @@
 {{wikipedia|Gettysburg Address}}
 
 ===Etymology===
-In Abraham Lincoln's Gettysburg Address, he used this (at the time) widely known measure of "score," meaning "20 years." In modern language, it would be simply "87 years ago." However, the widespread familiarity of Lincoln's address, the unusual and poetic wording, and its status as the first words of the speech have caused the phrase to enter the public consciousness.hi
-greetings professor falken boi.
+In Abraham Lincoln's Gettysburg Address, he used this (at the time) widely known measure of "score," meaning "20 years." In modern language, it would be simply "87 years ago." However, the widespread familiarity of Lincoln's address, the unusual and poetic wording, and its status as the first words of the speech have caused the phrase to enter the public consciousness.
 
 ===Adverb===
 {{head|en|adverb}}
