--- a/en/f/FEMA.26217.wikitext
+++ b/en/f/FEMA.26217.wikitext
@@ -8,7 +8,7 @@
 ===Proper noun===
 {{en-proper noun}}
 
-# {{w|Federal Emergency Management Agency}}
+# {{initialism of|{{w|Federal Emergency Management Agency}}|lang=en}}
 
 ===Anagrams===
 * {{l|en|fame}}
