t+kl:[[brøki]] ([[WT:EDIT|Assisted]]) <fraction#46041359>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -105,6 +105,7 @@ From {{etyl|enm|en}} {{m|enm|fraccioun||a breaking}}, from {{etyl|xno|en}}, from
 * French: {{t+|fr|fraction|f}}
 * German: {{t+|de|Bruch|m}}
 * Greek: {{t+|el|κλάσμα|n}}
+* Greenlandic: {{t|kl|brøki}}
 * Hungarian: {{t+|hu|tört}}, {{t+|hu|törtszám}}
 * Irish: {{t|ga|codán|m}}
 * Italian: {{t+|it|frazione|f}}
