--- a/en/h/hairnet.34110.wikitext
+++ b/en/h/hairnet.34110.wikitext
@@ -22,6 +22,7 @@
 * Catalan: {{t+|ca|ret|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|髮網|sc=Hani}}, {{t+|cmn|发网|tr=fàwǎng|sc=Hani}}, {{t+|cmn|頭套|sc=Hani}}, {{t+|cmn|头套|tr=tóutào|sc=Hani}}
+* Danish: {{t|da|hårnet|n}}
 * Dutch: {{t+|nl|haarnetje|n}}
 * Finnish: {{t|fi|hiusverkko}}
 * French: {{t+|fr|filet à cheveux|m}}, {{t+|fr|résille|f}}
