--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -156,7 +156,7 @@ From {{inh|en|enm|oter}}, {{m|enm|otir}}, {{m|enm|otur}}, {{m|enm|otyre}}, from 
 {{trans-bottom}}
 
 ===Etymology 2===
-{{etystub|en|corruption of annotto}}
+Corruption of {{l|en|annotto}}.
 
 ====Noun====
 {{en-noun|-}}
