--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -182,6 +182,15 @@ Abbreviation.
 
 ----
 
+==Brokskat==
+
+===Pronoun===
+{{head|bkk|verb}}
+
+# [[continued]]
+
+----
+
 ==Crimean Tatar==
 
 ===Noun===
