--- a/en/r/revest.855934.wikitext
+++ b/en/r/revest.855934.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|xno|en}} {{m|fro|revestir}}, {{m|en|revestre}} et al., {{etyl|frm|en}} {{m|frm|revestir}}, and their source, {{etyl|LL.|en}} {{m|en|revestire}}, from {{etyl|la|en}} {{m|la|re-}} + {{term|vestīre|to clothe}}.
+From {{etyl|xno|en}} {{m|fro|revestir}}, {{m|en|revestre}} et al., {{etyl|frm|en}} {{m|frm|revestir}}, and their source, {{etyl|LL.|en}} {{m|en|revestire}}, from {{etyl|la|en}} {{m|la|re-}} + {{m|la|vestīre|to clothe}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ɹiːˈvɛst/|lang=en}}
