--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -50,9 +50,11 @@ From {{inh|en|enm|croke}}, {{m|enm|crok}}, from {{inh|en|ang|*crōc|t=hook, bend
 {{trans-top|a criminal who steals}}
 * Bulgarian: {{t+|bg|крадец|m}}
 * Dutch: {{t+|nl|oplichter|m}}, {{t+|nl|oplichtster|f}}, {{t+|nl|zwendelaar|m}}, {{t|nl|zwendelaarster|f}}, {{t+|nl|afzetter|m}}, {{t|nl|afzetster|f}}, {{t+|nl|bedrieger|m}}, {{t+|nl|bedriegster|f}}
+* Esperanto: {{t|eo|fikomercisto}}
 * Finnish: {{t+|fi|rikollinen}}, {{t+|fi|konna}}
 * French: {{t+|fr|escroc|m}}, {{t+|fr|arnaqueur}}
 * German: {{t+|de|Gauner|m}}, {{t+|de|Ganove|m}}
+* Greek: {{t+|el|απατεώνας|m}}
 * Icelandic: {{t+|is|glæpamaður|m}}, {{t|is|þorpari|m}}
 * Indonesian: {{t+|id|maling}}, {{t+|id|bajingan}}
 * Irish: {{t|ga|bithiúnach|m}}
