/* Synonyms */ +wikisaurus link <behold#46067462>

--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -20,7 +20,7 @@ From {{etyl|enm|en}} {{m|enm|beholden}}, from {{etyl|ang|en}} {{m|ang|behealdan|
 Rarely used in informal speech. The past participle [[beholden]] now has a meaning detached from the other forms of the word.
 
 ====Synonyms====
-* {{l|en|get a load of}}
+* {{seeSynonyms|look}}
 
 ====Derived terms====
 * {{l|en|beholder}}
