--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -207,6 +207,15 @@ From {{etyl|sa|ms}} {{m|sa|मेघ|tr=megha||cloud}}.
 
 ----
 
+==Sundanese==
+
+===Noun===
+{{head|ms|noun|Sundanese spelling|ᮙᮦᮌ}}
+
+# [[cloud]] {{gloss|visible mass of water droplets suspended in the air}}
+
+----
+
 ==Spanish==
 
 ===Adjective===
