--- a/en/n/NRA.26207.wikitext
+++ b/en/n/NRA.26207.wikitext
@@ -3,7 +3,7 @@
 ===Proper noun===
 {{en-proper noun}}
 
-# {{lb|en|US}} {{initialism of|{{w|National Rifle Association|lang=en}}
+# {{lb|en|US}} {{initialism of|{{w|National Rifle Association}}|lang=en}}
 # {{lb|en|Ireland}} {{initialism of|{{w|National Roads Authority}}|lang=en}}
 
 ===Anagrams===
