--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -159,7 +159,7 @@ From {{etyl|enm|en}} {{m|enm|simple}}, from {{etyl|fro|en}} and {{etyl|fr|en}} {
 * Igbo: {{t-needed|ig}}
 * Indonesian: {{t+|id|sederhana}}, {{t+|id|mudah}}
 * Interlingua: {{t|ia|simple}}, {{t|ia|simplice}}
-* Interlingue: {{t-needed|ie}}
+* Interlingue: {{t|ie|simplic}}
 * Irish: {{t|ga|simplí}}
 * Italian: {{t+|it|semplice}}, {{t+|it|mero|m}}
 * Japanese: {{t+|ja|簡単|tr=かんたんな, kantan-na|alt=簡単な|sc=Jpan}}, {{t+|ja|単純|tr=たんじゅんな, tanjun-na|alt=単純な|sc=Jpan}}, {{qualifier|easy}} {{t+|ja|易い|tr=やすい, yasui|sc=Jpan}}
