+rhyme [[Rhymes:English/æŋki|-æŋki]] <blankie#46131797>

--- a/en/b/blankie.856215.wikitext
+++ b/en/b/blankie.856215.wikitext
@@ -8,6 +8,7 @@ Shortened from {{suffix|blanket|ie|lang=en}}.
 
 ===Pronunciation===
 * {{IPA|/ˈblæŋki/|lang=en}}
+* {{rhymes|æŋki|lang=en}}
 
 ===Noun===
 {{en-noun}}
