--- a/en/g/Godzone.855219.wikitext
+++ b/en/g/Godzone.855219.wikitext
@@ -6,7 +6,7 @@ Contraction of ''[[God]][['s]] [[own]] [[country]]''.
 ===Pronunciation===
 * {{IPA|/ˈɡɒdzəʊn/|lang=en}}
 
-===Noun===
-{{en-noun|-}}
+===Proper noun===
+{{en-proper noun}}
 
 # {{lb|en|New Zealand|informal}} [[New Zealand]].
