--- a/en/p/pace car.802773.wikitext
+++ b/en/p/pace car.802773.wikitext
@@ -2,8 +2,9 @@
 
 ===Noun===
 {{en-noun}}
-# {{lb|en|motor racing}} a [[car]] that other cars drive behind before a race starts.
-# {{lb|en|motor racing}} a car that paces the race cars to keep them running at a slower pace due to race conditions, which the other cars cannot pass
+
+# {{lb|en|motor racing}} A [[car]] that other cars drive behind before a race starts.
+# {{lb|en|motor racing}} A car that paces the race cars to keep them running at a slower pace due to race conditions, and which the other cars cannot pass.
 
 ====Related terms====
 * {{l|en|safety car}} {{qualifier|European English}}
