--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -212,6 +212,8 @@
 * Czech: {{t|cs|divize|f}}
 * Dutch: {{t+|nl|divisie|f}}
 * Esperanto: {{t|eo|divizio}}
+* Estonian: {{t|et|diviis}}
+* Estonian: {{t|et|diviis}}
 * Finnish: {{t+|fi|divisioona}}
 * French: {{t+|fr|division|f}}
 * Georgian: {{t|ka|დანაყოფი}}, {{t|ka|დივიზია}}
