--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -53,6 +53,8 @@ There are two main theories for the origin of {{etyl|fro|en}} {{m|fro|ermine}}. 
 * Greek: {{t+|el|ερμίνα|f}}
 * Hungarian: {{t+|hu|hermelin}}
 * Icelandic: {{t+|is|hreysiköttur}}
+* Interlingua: {{t|ia|armenio}}
+* Interlingue: {{t|ie|hermeline}}
 * Irish: {{t|ga|easóg|f}}, {{t|ga|cailín bán|m}}, {{t|ga|bláthnaid|f}} {{qualifier|female}}
 * Italian: {{t+|it|ermellino|m}}
 * Japanese: {{t+|ja|おこじょ|tr=okojo}}
