--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -268,6 +268,7 @@
 * Swahili: {{t+|sw|farakano}}
 * Swedish: {{t+|sv|division|c}}
 * Telugu: {{t+|te|విభాగము|sc=Telu}}
+* Welsh: {{t+|cy|adran|f}}
 * West Frisian: {{t|fy|divyzje|c}}
 {{trans-bottom}}
 
