--- a/en/e/executive order.776982.wikitext
+++ b/en/e/executive order.776982.wikitext
@@ -4,7 +4,7 @@
 ===Noun===
 {{en-noun}}
 
-# {{lb|en|legal|chiefly|US}} A [[legally]] [[enforceable]] order, [[decree]], or [[regulation]] issued on the authority of the head of the executive branch of [[government]].
+# {{lb|en|legal|chiefly|US}} An [[ordinance]] issued on the authority of the head of the executive branch of [[government]].
 
 ====Translations====
 {{trans-top|decree issued on the authority of the executive branch of government}}
