--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -149,7 +149,7 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from
 * Kurdish:
 *: Kurmanji: {{t+|kmr|zenî}}
 *: Sorani: {{t|ckb|چه‌ناگه‌|sc=ku-Arab}}
-* Kyrgyz: {{t|ki|ээк|sc=Cyrl}}
+* Kyrgyz: {{t|kk|ээк|sc=Cyrl}}
 * Ladin: {{t|lld|barboz|m}} {{qualifier|Cadorino dialect}}
 * Ladino: {{t|lad|keshada}}
 * Lak: {{t|lbe|лунттубакӀ|sc=Cyrl}}
