--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -74,6 +74,7 @@ Short for {{m|en|copper||police officer}}, itself from {{m|en||cop|one who cops}
 * Bulgarian: {{t+|bg|полицай|m}}, {{t+|bg|ченге|n}}
 * Chinese:
 *: Mandarin: {{t+|cmn|条子|tr=tiáozǐ |sc=Hani}}
+* Danish: {{t|da|panser|c}}, {{t|da|strisser|c}}, {{t|da|strømer|c}}
 * Dutch: {{t+|nl|diender|m}}
 * Estonian: {{t|et|ment}}
 * Finnish: {{t+|fi|pollari}}, {{t+|fi|kyttä}}
