--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -221,3 +221,4 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * {{l|en|squirrel away}}
 
 [[Category:en:Squirrels]]
+[[Category:en:People]]
