--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -23,7 +23,7 @@ From {{etyl|frm|en}} {{m|frm|advertissement||statement calling attention}}, comp
 # A [[public]] [[notice]].
 #: ''The city council placed an '''advertisement''' in the local newspaper to inform its residents of the forthcoming roadworks.''
 # A [[recommendation]] of a [[particular]] [[product]], [[service]] or [[person]].
-#: The people gave a good advertisement for Wiktionary.
+#: The people gave a good '''advertisement''' for Wiktionary.
 
 ====Synonyms====
 * {{sense|commercial solicitation}} {{l|en|ad}}, {{l|en|advert}}
