--- a/en/l/laverock.720420.wikitext
+++ b/en/l/laverock.720420.wikitext
@@ -18,3 +18,4 @@ From {{etyl|enm|en}} {{m|enm|laveroc}}, {{m|enm|laverke}}, from Old English {{m|
 # A [[lark]].
 
 [[Category:sco:Birds]]
+[[Category:en:Larks]]
