--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -2,11 +2,6 @@
 ==English==
 [[Image:Transnistria-map.png|thumb|right|Moldavia in purple, Transnistria in yellow]]
 
-===Alternative forms===
-* {{l|en|Transdniestria}}
-* {{l|en|Trans-Dniester}}
-* {{l|en|Pridnestrovie}}
-
 ===Etymology===
 From {{bor|en|ro|Transnistria|notext=1}}, from {{der|en|la|trans-}} + {{der|en|ro|Nistru|t=Dniester}} + {{m|ro|-ia}}: literally “beyond the river [[Dniester]]”. {{etystub|lang=en}}
 
@@ -16,7 +11,10 @@ From {{bor|en|ro|Transnistria|notext=1}}, from {{der|en|la|trans-}} + {{der|en|r
 # {{lb|en|historical}} A [[governorate]] of [[Romania]] during [[World War II]], established in 1941 and captured by Soviet forces in 1944.
 # An [[autonomous]] [[territory]] within [[Moldova]], not [[internationally]] [[recognized]] as a [[nation]].
 
-{{-}}
+====Synonyms====
+* {{l|en|Transdniestria}}
+* {{l|en|Trans-Dniester}}
+* {{l|en|Pridnestrovie}}
 
 ====Translations====
 {{trans-top|Transnistria, an autonomous territory in Moldova}}
