t+io:[[manjar]] ([[WT:EDIT|Assisted]]) <consume#46486160>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -85,6 +85,7 @@ From {{etyl|fro|en}} {{m|fro|consumer}}, from {{etyl|la|en}} {{m|la|consumere}}.
 * Hindi: {{t|hi|उपभोग करना|tr=upbhog karna|sc=Deva}}
 * Hungarian: {{t+|hu|elfogyaszt}}
 {{trans-mid}}
+* Ido: {{t+|io|manjar}}
 * Irish: {{t|ga|caith}}
 * Italian: {{t+|it|consumare}}
 * Latin: {{t|la|peredō}}
