--- a/en/s/sales slip.776058.wikitext
+++ b/en/s/sales slip.776058.wikitext
@@ -10,6 +10,7 @@
 
 ====Translations====
 {{trans-top|receipt for a purchase}}
+* Danish: {{t|da|bon|c}}, {{t|da|kassebon|c}}
 * German: {{t+|de|Kassenzettel|m}}
 {{trans-mid}}
 {{trans-bottom}}
