[[Category:English eponyms]]  ~ <Faraday rotation#46632438>

--- a/en/f/Faraday rotation.774454.wikitext
+++ b/en/f/Faraday rotation.774454.wikitext
@@ -1,10 +1,10 @@
 ==English==
 
 ===Etymology===
-From [[w:Michael Faraday|Michael Faraday]], who first described the effect.
+From {{w|Michael Faraday}}, who first described the effect.
 
 ===Noun===
-{{en-noun}}
+{{en-noun|~}}
 {{wikipedia}}
 
 # {{lb|en|physics}} An interaction between a [[polarize]]d electromagnetic pulse, such as a beam of light, and a [[magnetic field]], in which the plane of polarization is rotated in proportion to the [[intensity]] of the component of the magnetic field in the direction of travel of the pulse.
@@ -19,3 +19,5 @@ From [[w:Michael Faraday|Michael Faraday]], who first described the effect.
 
 ====Synonyms====
 * {{l|en|Faraday effect}}
+
+[[Category:English eponyms]]
