--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -71,6 +71,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * Hungarian: {{t+|hu|borz}}
 * Icelandic: {{t|is|greifingi|m}}
 * Ido: {{t+|io|daxo}}
+* Interlingua: {{t|ia|taxon}}
 * Irish: {{t+|ga|broc|m}}
 * Italian: {{t+|it|tasso|m}}
 * Japanese: {{t|ja|アナグマ|tr=anaguma}}, {{t|ja|穴熊|tr=あなぐま, anaguma}}
@@ -84,10 +85,10 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * Latin: {{t|la|mēles|f}}
 * Latvian: {{t+|lv|āpsis|m}}
 * Lithuanian: {{t+|lt|barsukas|m}}, {{t|lt|opšrus|?}}
+{{trans-mid}}
 * Low German:
 *: Dutch Low Saxon: {{t-needed|nds-nl}}
 *: German Low German: {{t|nds-de|Tacks|m}}, {{t|nds-de|Daks}}
-{{trans-mid}}
 * Macedonian: {{t|mk|ја́зовец|m}}
 * Malay: {{t|ms|bejar}}
 * Manx: {{t|gv|broc|m}}
