/* Pronunciation */ added en-us audio pronunciation <antinomianism#46637307>

--- a/en/a/antinomianism.801172.wikitext
+++ b/en/a/antinomianism.801172.wikitext
@@ -6,8 +6,8 @@ From {{suffix|antinomian|ism|lang=en}}, coined by {{w|Martin Luther}}, notably u
 
 ===Pronunciation===
 * {{IPA|/æntiˈnoʊmi.ənɪzəm/|lang=en}}
+* {{audio|en-us-antinomianism.ogg|Audio (US)|lang=en}}
 * {{hyphenation|an|ti|no|mi|an|ism|lang=en}}
-{{rfap|lang=en}}
 
 ===Noun===
 {{en-noun|~}}
