--- a/en/a/antinomianism.801172.wikitext
+++ b/en/a/antinomianism.801172.wikitext
@@ -5,7 +5,7 @@
 From {{suffix|antinomian|ism|lang=en}}, coined by {{w|Martin Luther}}, notably used in his ''Against the Antinomians'' (1539).
 
 ===Pronunciation===
-* {{IPA|/æntiˈnoʊmi.ənɪzəm/|lang=en}}
+* {{a|US}} {{IPA|/æntiˈnoʊmi.ənɪzəm/|lang=en}}
 * {{audio|en-us-antinomianism.ogg|Audio (US)|lang=en}}
 * {{hyphenation|an|ti|no|mi|an|ism|lang=en}}
 
