--- a/en/i/indeterminable.742104.wikitext
+++ b/en/i/indeterminable.742104.wikitext
@@ -39,3 +39,12 @@ From {{etyl|frm|en}} {{m|frm|indeterminable}}, from {{etyl|LL.|en}} {{m|la|indet
 
 ====Antonyms====
 * {{l|en|determinable}}
+
+----
+
+==Spanish==
+
+===Adjective===
+{{es-adj}}
+
+# {{l|en|indeterminable}}
