--- a/en/b/breathability.856220.wikitext
+++ b/en/b/breathability.856220.wikitext
@@ -4,7 +4,7 @@
 {{suffix|lang=en|breathable|ity}}
 
 ===Pronunciation===
-{{rfp|lang=en}}
+* {{a|US}} {{IPA|/ˌbɹiːðəˈbɪləti/|lang=en}}
 
 ===Noun===
 {{en-noun|breathabilities}}
