--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -87,6 +87,7 @@
 * Finnish: {{t+|fi|amerikanenglanti}}
 * French: {{t+|fr|anglais américain|m}}
 * Galician: {{t|gl|inglés estadounidense|m}}, {{t|gl|inglés americano|m}}
+* Georgian: {{t|ka|ამერიკული ინგლისური}}
 * German: {{t|de|Amerikanisches Englisch}}
 * Hungarian: {{t+|hu|amerikai angol}}
 {{trans-mid}}
