--- a/en/g/grid electricity.776660.wikitext
+++ b/en/g/grid electricity.776660.wikitext
@@ -1,9 +1,9 @@
 ==English==
 
 ===Noun===
-{{head|en|noun}}
+{{en-noun|-}}
 
-# Electric energy delivered to a consumer from the [[w:public electricity network|public electricity network]].
+# Electric energy delivered to a consumer from the [[public]] [[electricity network]].
 
 ====Translations====
 {{trans-top|electricity from the grid}}
