--- a/en/a/a number of.776983.wikitext
+++ b/en/a/a number of.776983.wikitext
@@ -16,7 +16,7 @@
 {{trans-top|several}}
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t+|fi|moni}}
 {{trans-mid}}
 * Russian: {{t+|ru|ряд|m}}, {{t+|ru|не́сколько}}
 * Spanish: {{t-needed|es}}
@@ -25,7 +25,7 @@
 {{trans-top|several of}}
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t+|fi|moni}}
 {{trans-mid}}
 * Russian: {{t+|ru|ряд|m}}, {{t+|ru|не́сколько}}
 * Spanish: {{t-needed|es}}
