--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -82,6 +82,7 @@ The verb comes from the supposed cunningness of the weasel.
 * Latin: {{t|la|mustela|f}}
 * Latvian: {{t|lv|zebiekste|f}}
 * Lithuanian: {{t|lt|žebenkštis|m}}
+* Low German: {{t+|nds|Wesel|n}}
 * Luxembourgish: {{t|lb|Wisel|n}}
 * Macedonian: {{t|mk|ла́сица|f}}
 * Malay: {{t|ms|wesel}}
