<fend for oneself#46761629>

--- a/en/f/fend for oneself.742280.wikitext
+++ b/en/f/fend for oneself.742280.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Verb===
-{{en-verb|fends for oneself|fending for oneself|fended for oneself|fended for oneself}}
+{{en-verb|fends for oneself|fending for oneself|fended for oneself}}
 
 # To [[take care]] of oneself without help.
 #* '''2012''', Christoper Zara, ''Tortured Artists: From Picasso and Monroe to Warhol and Winehouse, the Twisted Secrets of the World's Most Creative Minds'', part 1, chapter 1, {{gbooks|q=fend-for-themselves|id=HV4jKhjzMVYC|pg=26}}:
