--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -351,6 +351,8 @@ From {{inh|frp|la|canem}}, accusative singular of {{m|la|canis}}.
 
 # [[grime]], [[filth]], [[body]] [[dirt]]
 
+====Synonyme====
+* {{l|nv|ih}}
 ----
 
 ==Romanian==
