--- a/en/d/duvel.741377.wikitext
+++ b/en/d/duvel.741377.wikitext
@@ -39,6 +39,7 @@ From {{inh|dum|odt|diuval}}, from {{der|dum|la|diabolus}}, from {{der|dum|grc|δ
 
 ====Descendants====
 * Dutch: {{l|nl|duivel}}
+* Limburgish: {{l|li|duvel}}
 
 ===Further reading===
 * {{R:VMNW|ID20042}}
