--- a/en/κ/κύων.4255.wikitext
+++ b/en/κ/κύων.4255.wikitext
@@ -1,7 +1,7 @@
 ==Ancient Greek==
 
 ===Etymology===
-From {{inh|grc|ine-pro|*ḱwṓ}}. Cognates include Latin {{m|la|canis}}, Sanskrit {{m|sa|श्वन्|tr=śván}} and Old English {{m|ang|hund}} (English {{m|en|hound}}). The final {{m|grc||-ν}} in the nominative singular which was absent in {{m|ine-pro|*ḱwṓ}} was restored in Greek by analogy to other forms in the paradigm.
+From {{inh|grc|ine-pro|*ḱwṓ}}. Cognates include {{cog|la|canis}}, {{cog|sa|श्वन्|tr=śván}} and {{cog|ang|hund}} ({{cog|en|hound}}). The final {{m|grc||-ν}} in the nominative singular which was absent in {{m|ine-pro|*ḱwṓ}} was restored in Greek by analogy to other forms in the paradigm.
 
 ===Pronunciation===
 {{grc-IPA|w=κύ˘ων}}
