--- a/en/p/Pax Romana.855978.wikitext
+++ b/en/p/Pax Romana.855978.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From Latin. Coined by [[w:Edward Gibbon|Edward Gibbon]].
+From {{etyl|la|en}}. Coined by [[w:Edward Gibbon|Edward Gibbon]].
 
 ===Proper noun===
 {{en-proper noun|head=Pax Romana}}
