--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -796,32 +796,28 @@ From {{etyl|en|tcs}} {{m|en|heart}}.
 
 ==Turkish==
 
-===Etymology===
-From {{der|tr|otk|𐱃|tr=at}}, from {{inh|tr|trk-pro|*at}}, {{m|trk-pro|*ăt||horse}}.
-
 ===Pronunciation===
 * {{IPA|/ät̪/|lang=tr}}
 * {{audio|Tur-at.ogg|Audio|lang=tr}}
 
-===Noun===
+===Etymology 1===
+From {{inh|tr|ota|آت|tr=at|t=horse}}, from {{inh|tr|trk-pro|*at}}, {{m|trk-pro|*ăt|t=horse}}. Cognate with {{cog|xqa|اَتْ|tr=at}}, {{cog|otk|𐱃|tr=at}}.
+
+====Noun====
 {{tr-noun|ı|lar}}
 
 # {{lb|tr|zoology}} [[horse]]
 # {{lb|tr|chess}} [[knight]]
 
-====Declension====
+=====Declension=====
 {{tr-noun-c|a|t|pred=+|poss=+}}
 
-====Descendants====
-* Greek: {{l|el|άτι|gloss=horse|g=m}}
+===Etymology 2===
 
 ===Verb===
 {{head|tr|verb form}}
 
 # {{inflection of|atmak||2|s|imp|lang=tr}}
-
-====Antonyms====
-* {{l|tr|atma}}
 
 ===Further reading===
 * {{R:TDK}}
