/* Turkmen */ not from old turkic! <at#46890643>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -829,7 +829,7 @@ From {{inh|tr|ota|آت|tr=at|t=horse}}, from {{inh|tr|trk-pro|*at}}, {{m|trk-pro
 ==Turkmen==
 
 ===Etymology 1===
-From {{der|tk|otk|𐱃|tr=at}}, from {{inh|tk|trk-pro|*at}}, {{m|trk-pro|*ăt||horse}}.
+From {{inh|tk|trk-pro|*at}}, {{m|trk-pro|*ăt|t=horse}}.
 
 ====Pronunciation====
 * {{IPA|/at/|lang=tk}}
@@ -843,7 +843,7 @@ From {{der|tk|otk|𐱃|tr=at}}, from {{inh|tk|trk-pro|*at}}, {{m|trk-pro|*ăt||h
 {{tk-decl-noun-man|at|atlar|ady|atlary|adyň|atlaryň|ada|atlara|atda|atlarda|atdan|atlardan}}
 
 ===Etymology 2===
-From {{der|tk|otk|𐰀𐱃|tr=āt||name}}, from {{inh|tk|trk-pro|*āt}} (compare {{cog|cv|ят||name}}).
+From {{inh|tk|trk-pro|*āt|t=name}}. Cognate with {{cog|otk|𐰀𐱃|tr=āt|t=name}}, {{cog|cv|ят||name}}, {{cog|tr|ad}}.
 
 ====Pronunciation====
 * {{IPA|/aːt/|lang=tk}}
