/* Middle Dutch */ <otter#46895155>

--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -226,6 +226,7 @@ From {{inh|dum|odt|ottar}}, from {{inh|dum|gem-pro|*utraz}}, from {{inh|dum|ine-
 
 ====Descendants====
 * Dutch: {{l|nl|otter}}
+* Limburgish: {{l|li|ódder}}
 
 ===Further reading===
 * {{R:VMNW|ID2485}}
