--- a/en/t/Tijuana.741400.wikitext
+++ b/en/t/Tijuana.741400.wikitext
@@ -1,13 +1,20 @@
 ==English==
+
+===Etymology===
+{{bor|en|es|Tijuana}}. {{etystub|lang=en}}
+
+===Pronunciation===
 {{wikipedia}}
+* {{rhymes|ɑːnə|lang=en}}
 
 ===Proper noun===
 {{en-proper noun}}
 
-# A city in the northwest of [[Baja California]], [[Mexico]], by the American border with [[San Diego]].
+# {{place|en|city|s/Baja California|c/Mexico|by the American border with [[San Diego]]}}
+#: {{syn|en|TJ {{qualifier|abbreviation}}}}
 
 ====Translations====
-{{trans-top|a city in Mexico}}
+{{trans-top|city in Baja California, Mexico}}
 * Japanese: {{t|ja|ティファナ|tr=Tifana}}
 {{trans-mid}}
 * Spanish: {{t+|es|Tijuana|f}}
@@ -16,4 +23,23 @@
 ===Anagrams===
 * {{anagrams|en|Juanita}}
 
-[[Category:en:Cities]]
+----
+
+==Spanish==
+
+===Etymology===
+{{rfe|es}}
+
+===Pronunciation===
+{{wikipedia|lang=es}}
+* {{es-IPA}}
+* {{rhymes|ana|lang=es}}
+* {{hyphenation|Ti|jua|na|lang=es}}
+
+===Proper noun===
+{{es-proper noun|f}}
+
+# {{place|es|city|s/Baja California|c/Mexico|t1=Tijuana}}
+
+===Anagrams===
+* {{anagrams|es|Juanita}}
