--- a/en/t/Tijuana.741400.wikitext
+++ b/en/t/Tijuana.741400.wikitext
@@ -11,7 +11,11 @@
 {{en-proper noun}}
 
 # {{place|en|city|s/Baja California|c/Mexico|by the American border with [[San Diego]]}}
-#: {{syn|en|TJ {{qualifier|abbreviation}}}}
+#: {{syn|en|[[TJ]] {{qualifier|abbreviation}}}}
+
+====Derived terms====
+* {{l|en|Tijuana Bible}}
+* {{l|en|Tijuanan}}
 
 ====Translations====
 {{trans-top|city in Baja California, Mexico}}
