--- a/en/t/Tijuana.741400.wikitext
+++ b/en/t/Tijuana.741400.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{bor|en|es|Tijuana}}. {{etystub|lang=en}}
+{{bor|en|es|Tijuana}}, possibly from {{der|en|dih|Tiwan|lit=by-the-sea}}.
 
 ===Pronunciation===
 {{wikipedia}}
