--- a/en/t/Tijuana.741400.wikitext
+++ b/en/t/Tijuana.741400.wikitext
@@ -35,7 +35,7 @@
 ==Spanish==
 
 ===Etymology===
-{{rfe|es}}
+Possibly from {{der|es|dih|Tiwan|lit=by-the-sea}}.
 
 ===Pronunciation===
 {{wikipedia|lang=es}}
