--- a/en/t/Tijuana.741400.wikitext
+++ b/en/t/Tijuana.741400.wikitext
@@ -24,16 +24,24 @@
 
 ====Translations====
 {{trans-top|city in Baja California, Mexico}}
+* Belarusian: {{t|be|Тыхуа́на|f}}
+* Georgian: {{t|ka|ტიხუანა}}
 * Greek: {{t|el|Τιχουάνα|f}}
 * Icelandic: {{t|is|Tíjuana|f|alt=Tíjúana}}
 * Japanese: {{t|ja|ティファナ|tr=Tifana}}, {{qualifier|less common}} {{t|ja|ティフアナ|tr=Tifuana}}
+* Korean: {{t|ko|^티후아나}}
 * Latvian: {{t|lv|Tihuana|f}}
-{{trans-mid}}
 * Lithuanian: {{t|lt|Tichuana|f}}
+{{trans-mid}}
+* Malayalam: {{t|ml|ടീഹ്വാന}}
+* Ossetian: {{t|os|Тихуанæ}}
+* Punjabi: {{t|pa|ਤੀਖ਼ਵਾਨਾ|f}}
+* Russian: {{t|ru|Тихуа́на|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Тихуана|f}}
 *: Roman: {{t|sh|Tijuana|f}}
 * Spanish: {{t+|es|Tijuana|f}}
+* Ukrainian: {{t|uk|Тіхуа́на|f}}
 {{trans-bottom}}
 
 ===Anagrams===
