--- a/en/t/Tijuana.741400.wikitext
+++ b/en/t/Tijuana.741400.wikitext
@@ -12,7 +12,7 @@
 ===Proper noun===
 {{en-proper noun}}
 
-# {{place|en|city|s/Baja California|c/Mexico|by the American border with [[San Diego]]}}
+# {{place|en|city|s/Baja California|c/Mexico|by the American border with [[San Diego]]|a=The largest}}
 #: {{syn|en|[[TJ]] {{qualifier|abbreviation}}}}
 
 ====Derived terms====
