--- a/en/t/Tijuana.741400.wikitext
+++ b/en/t/Tijuana.741400.wikitext
@@ -40,7 +40,7 @@
 * Malayalam: {{t|ml|ടീഹ്വാന}}
 * Marathi: {{t|mr|तिहुआना|f}}
 * Ossetian: {{t|os|Тихуанæ}}
-* Persian: {{t|fa|تیخوانا|tr=Tijovânâ}}, {{t|fa|تیهوانا|tr=Tihovânâ}}
+* Persian: {{t|fa|تیخوانا|tr=Tixovânâ}}, {{t|fa|تیهوانا|tr=Tihovânâ}}
 * Punjabi: {{t|pa|ਤੀਖ਼ਵਾਨਾ|f}}
 * Russian: {{t|ru|Тихуа́на|f}}
 * Serbo-Croatian:
