--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -81,7 +81,7 @@ From {{etyl|frm|en}} {{m|frm|pole||hen}} + {{m|en|cat}}. So named because of its
 * Scottish Gaelic: {{t|gd|feòcallan}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|твор|m|sc=Cyrl}}
-*: Latin {{t+|sh|tvor|m|sc=Latn}}
+*: Latin: {{t+|sh|tvor|m|sc=Latn}}
 * Slovak: {{t|sk|tchor obyčajný}}
 * Slovene: {{t+|sl|dihur|m}}
 * Sorbian:
