--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -74,8 +74,10 @@ From {{m|en|bend}}.
 
 {{trans-top|Homosexual}}
 * Bulgarian: {{t|bg|педерастки}}
-* Polish: {{t|pl|przegięty|m}}
+* Chinese:
+*: Mandarin: {{t+|cmn|彎|tr=wān}}, {{t+|cmn|弯|tr=wān}}
 {{trans-mid}}
+* Polish: {{t|pl|przegięty|m}}
 * Russian: {{t|ru|пидорский}}, {{t|ru|гомосяцкий}}
 {{trans-bottom}}
 
