t+io:[[ludriskar]] ([[WT:EDIT|Assisted]]) <gamble#46918904>

--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -81,6 +81,7 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 * Greek: {{t+|el|στοιχηματίζω}}
 {{trans-mid}}
 * Hebrew: {{t+|he|הימר|tr=himér}}
+* Ido: {{t|io|ludriskar}}
 * Indonesian: {{t+|id|bertaruh}}, {{t+|id|mempertaruhkan}}
 * Italian: {{t+|it|scommettere}}
 * Japanese: {{t+|ja|賭ける|tr=[[かける]], kakeru|sc=Jpan}}
@@ -104,6 +105,7 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 * Finnish: {{t|fi|uhkapelata}}
 * German: {{t+|de|wetten}}, {{t+|de|spielen}}, {{qualifier|slang}} {{t+|de|zocken}}
 * Hebrew: {{t+|he|הימר|tr=himér}}
+* Ido: {{t|io|ludriskar}}
 * Indonesian: {{t+|id|berjudi}}
 {{trans-mid}}
 * Japanese: {{t+|ja|賭ける|tr=[[かける]], kakeru|sc=Jpan}}
