--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -144,6 +144,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Irish: {{t|ga|rud|m}}, {{t|ga|ní|m}}
 * Italian: {{t+|it|cosa|f}}
 * Japanese: {{t+|ja|物|tr=もの, mono|sc=Jpan}}
+* Karakhanid: {{t|xqa|نانْكْ|tr=nēŋ}}
 * Kazakh: {{t|kk|нәрсе|sc=Cyrl}}
 * Khmer: {{t+|km|របស់|tr=rɔbɑh|sc=Khmr}}, {{t+|km|វត្ថុ|tr=voattʰo’|sc=Khmr}}
 * Korean: {{t+|ko|물건|sc=Kore}}
