--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -184,9 +184,9 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Galician: {{t+|gl|porco|m}}, {{t+|gl|cocho|m}}
 * Georgian: {{t+|ka|ღორი}}
 * German: {{t+|de|Schwein|n}}, {{qualifier|domestic}} {{t+|de|Hausschwein|n}},
-*: Franconian {{t|de|Mocke|f}}
-*: Regional German {{t+|de|Docke|f}}, {{t+|de|Wutz|f}}
-*: Swabian {{t|de|Kosel|f}}
+*: Franconian: {{t|de|Mocke|f}}
+*: Regional German: {{t+|de|Docke|f}}, {{t+|de|Wutz|f}}
+*: Swabian: {{t|de|Kosel|f}}
 * Gothic: {{t|got|𐍃𐍅𐌴𐌹𐌽|n|sc=Goth}}
 * Greek: {{t+|el|γουρούνι|n}}
 *: Ancient Greek: {{t|grc|ὗς}}
