--- a/en/b/bahasa.4609.wikitext
+++ b/en/b/bahasa.4609.wikitext
@@ -26,6 +26,8 @@ From {{etyl|ms|id}} {{m|ms|bahasa}}, from {{etyl|sa|id}} {{m|sa|भाषा||la
 
 ====Derived terms====
 * {{l|id|bahasa Indonesia}}
+* {{l|id|juru bahasa}}
+* {{l|id|pakar bahasa}}
 
 [[Category:id:Language]]
 
