--- a/en/m/maiden voyage.745833.wikitext
+++ b/en/m/maiden voyage.745833.wikitext
@@ -22,4 +22,5 @@ See {{m|en|maiden}}, adjective.
 * Japanese: {{t|ja|処女航海|tr=shojo kōkai}}
 * Korean: {{t-needed|ko}}
 * Spanish: {{t|es|viaje inaugural|m}}
+* Indonesian: Perjalanan Perdana
 {{trans-bottom}}
