/* Pronunciation */ capitalized E in audio filename <antinomianism#46945019>

--- a/en/a/antinomianism.801172.wikitext
+++ b/en/a/antinomianism.801172.wikitext
@@ -6,7 +6,7 @@ From {{suffix|antinomian|ism|lang=en}}, coined by {{w|Martin Luther}}, notably u
 
 ===Pronunciation===
 * {{a|US}} {{IPA|/æntiˈnoʊmi.ənɪzəm/|lang=en}}
-* {{audio|en-us-antinomianism.ogg|Audio (US)|lang=en}}
+* {{audio|En-us-antinomianism.ogg|Audio (US)|lang=en}}
 * {{hyphenation|an|ti|no|mi|an|ism|lang=en}}
 
 ===Noun===
