--- a/en/b/breathability.856220.wikitext
+++ b/en/b/breathability.856220.wikitext
@@ -5,7 +5,7 @@
 
 ===Pronunciation===
 * {{a|US}} {{IPA|/ˌbɹiːðəˈbɪləti/|lang=en}}
-* {{audio|en-us-breathability.ogg|Audio (US)|lang=en}}
+* {{audio|En-us-breathability.ogg|Audio (US)|lang=en}}
 
 ===Noun===
 {{en-noun|breathabilities}}
