--- a/en/a/abandonar.4113.wikitext
+++ b/en/a/abandonar.4113.wikitext
@@ -39,6 +39,7 @@
 {{io-verb|abandon}}
 
 # {{lb|io|transitive}} to [[abandon]], {{gloss|wholly}} [[give up]], {{gloss|totally}} [[relinquish]], [[forego]], [[forsake]]
+#: {{ux|io|Ne '''abandonez''' tua frato!|Don't '''abandon''' your brother!|inline=yes}}
 
 ====Conjugation====
 {{io-conj}}
