t+lb:[[Andeelung]] t-balance ([[WT:EDIT|Assisted]]) <division#46949883>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -257,8 +257,9 @@
 * Japanese: {{t+|ja|部|tr=ぶ, bu|sc=Jpan}}
 * Kurdish:
 *: Sorani: {{t|ckb|بەش|tr=beş}}
-* Macedonian: {{t|mk|оддел|m|tr=óddel|sc=Cyrl}}, {{t|mk|одделение|n|tr=otdelénie|sc=Cyrl}}
+* Luxembourgish: {{t|lb|Andeelung|f}}
 {{trans-mid}}
+* Macedonian: {{t|mk|оддел|m|tr=óddel|sc=Cyrl}}, {{t|mk|одделение|n|tr=otdelénie|sc=Cyrl}}
 * Norwegian:
 *: Bokmål: {{t+|nb|divisjon|m}}
 *: Nynorsk: {{t|nn|divisjon|m}}
