--- a/en/r/Replogle tube.746611.wikitext
+++ b/en/r/Replogle tube.746611.wikitext
@@ -3,7 +3,7 @@
 ===Noun===
 {{en-noun}}
 
-# {{lb|en|medicine|neonatal medicine}} A [[repogle tube]]; a multi-lumen orogastric tube that functions as a sump tube with one lumen providing suction and the other providing irrigation or venting. Safer than conventional suction because it reduces the risk of adherence to the gastric lining and subsequent damage.
+# {{lb|en|medicine|neonatal medicine}} A [[replogle tube]]; a multi-lumen orogastric tube that functions as a sump tube with one lumen providing suction and the other providing irrigation or venting. Safer than conventional suction because it reduces the risk of adherence to the gastric lining and subsequent damage.
 
 ===Anagrams===
 * {{anagrams|en|leg rope|legrope}}
