--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -209,9 +209,9 @@ From {{etyl|sa|ms}} {{m|sa|मेघ||cloud}}.
 ==Spanish==
 
 ===Adjective===
-{{head|es|adjective form}}
+{{es-adj-form|f-s}}
 
-# {{feminine singular of|lang=es|mego}}
+# {{es-adj form of|mego|f|sg}}
 
 ----
 
