--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -129,42 +129,35 @@ From {{etyl|non|is}} {{m|non|mega}}, from {{etyl|gem-pro|is}} {{m|gem-pro|*magan
 {{is-verb-preterite|má|mátti|mátt}}
 
 # {{lb|is|ambitransitive|governs the accusative}} to be [[allowed]], to be [[permitted]], to [[may]]{{jump|is|be allowed|s}}
-#: ''Þú '''mátt''' þetta ekki.''
-#:: You''''re''' not '''allowed''' to do that.
-#: ''Hvað '''má''' bjóða ykkur að borða?''
-#:: What '''may''' offer you to eat?
+#: {{ux|is|Þú '''mátt''' þetta ekki.|inline=1|You''''re''' not '''allowed''' to do that.}}
+#: {{ux|is|Hvað '''má''' bjóða ykkur að borða?|inline=1|What '''may''' offer you to eat?}}
 # {{lb|is|intransitive}} to [[must]], to [[have to]]{{jump|is|must|s}}
 # to have the [[strength]], to be [[able]]{{jump|is|have the strength|s}}
 
-====Derived terms====
-{{der-top3}}
-* {{l|is|eins og nærri má geta}}
-* {{l|is|má vera}}
-* {{l|is|mega betur}} (to [[have the upperhand]])
-* {{l|is|mega ekki}}
-* {{l|is|mega ekki hugsa til}}
-{{der-mid3}}
-* {{l|is|mega ekki vamm sitt vita}} (to be concerned about one's reputation)
-* {{l|is|mega lengi lifa}}
-* {{l|is|mega sín ekki við}} (to not [[manage]] something)
-* {{l|is|mega sín mikils}}
-{{der-mid3}}
-* {{l|is|mega sín mikils}} (have a lot of [[influence]], to be [[powerful]])
-* {{l|is|mega til}} (to must, to have to)
-* {{l|is|mega vera að}}
-* {{l|is|mega vera að}} (to have the time to do)
-{{der-bottom}}
-
 ====Synonyms====
-* {{jump|s|is|be allowed}} [[hafa leyfi til]]
-* {{jump|s|is|must}} [[verða]]
-* {{jump|s|is|have the strength}} [[megna]]
+* {{jump|s|is|be allowed}} {{l|is|hafa leyfi til}}
+* {{jump|s|is|must}} {{l|is|verða}}
+* {{jump|s|is|have the strength}} {{l|is|megna}}
+
+====Derived terms====
+{{der3
+|{{l|is|eins og nærri má geta}}
+|{{l|is|má vera}}
+|{{l|is|mega betur|t=to [[have the upper hand]]}}
+|{{l|is|mega ekki}}
+|{{l|is|mega ekki hugsa til}}
+|{{l|is|mega ekki vamm sitt vita|t=to be concerned about one's reputation}}
+|{{l|is|mega lengi lifa}}
+|{{l|is|mega sín ekki við|t=to not [[manage]] something}}
+|{{l|is|mega sín mikils}}
+|{{l|is|mega sín mikils|t=have a lot of [[influence]], to be [[powerful]]}}
+|{{l|is|mega til|t=to must, to have to}}
+|{{l|is|mega vera að}}
+|{{l|is|mega vera að|t=to have the time to do}}
+|lang=is}}
 
 [[Category:Most used Icelandic verbs]]
-
 [[Category:Icelandic auxiliary verbs]]
-[[Category:Icelandic intransitive verbs]]
-[[Category:Icelandic transitive verbs]]
 
 ----
 
