--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From the prefix {{m|en|mega-}}, from {{etyl|grc|en}} {{m|grc|μέγας||great, large, mighty}}.
+From the prefix {{m|en|mega-}}, from {{der|en|grc|μέγας|t=great, large, mighty}}.
 
 ===Pronunciation===
 * {{IPA|/ˈmɛɡə/|lang=en}}
@@ -22,7 +22,6 @@ From the prefix {{m|en|mega-}}, from {{etyl|grc|en}} {{m|grc|μέγας||great, 
 
 ====Translations====
 {{trans-top|very large}}
-* Finnish: mega-, [[jättiläis]]-
 {{trans-mid}}
 * Greek: {{t+|el|μέγας|m}}
 {{trans-bottom}}
@@ -89,7 +88,7 @@ From the prefix {{m|en|mega-}}, from {{etyl|grc|en}} {{m|grc|μέγας||great, 
 {{ordinalbox|eo||1,000,000a||card=meg}}
 
 ===Etymology===
-{{suffix|meg|a|lang=eo}}.
+From {{af|eo|meg|-a}}.
 
 ===Adjective===
 {{eo-head}}
@@ -104,7 +103,7 @@ From the prefix {{m|en|mega-}}, from {{etyl|grc|en}} {{m|grc|μέγας||great, 
 ==Faroese==
 
 ===Etymology===
-From {{etyl|non|fo}} {{m|non|mega}}, from {{etyl|gem-pro|fo}} {{m|gem-pro|*maganą}}, from {{etyl|ine-pro|fo}} {{m|ine-pro|*magʰ-}}, {{m|ine-pro|*megʰ-}}.
+From {{inh|fo|non|mega}}, from {{inh|fo|gem-pro|*maganą}}, from {{der|fo|ine-pro|*magʰ-}}, {{m|ine-pro|*megʰ-}}.
 
 ===Verb===
 {{head|fo|verb}}
@@ -119,7 +118,7 @@ From {{etyl|non|fo}} {{m|non|mega}}, from {{etyl|gem-pro|fo}} {{m|gem-pro|*magan
 ==Icelandic==
 
 ===Etymology===
-From {{etyl|non|is}} {{m|non|mega}}, from {{etyl|gem-pro|is}} {{m|gem-pro|*maganą}}, from {{etyl|ine-pro|is}} {{m|ine-pro|*magʰ-}}, {{m|ine-pro|*megʰ-}}.
+From {{inh|is|non|mega}}, from {{inh|is|gem-pro|*maganą}}, from {{der|is|ine-pro|*magʰ-}}, {{m|ine-pro|*megʰ-}}.
 
 ===Pronunciation===
 * {{IPA|/ˈmeiːɣa/|lang=is}}
@@ -164,7 +163,7 @@ From {{etyl|non|is}} {{m|non|mega}}, from {{etyl|gem-pro|is}} {{m|gem-pro|*magan
 ==Indonesian==
 
 ===Etymology===
-From {{etyl|ms|id}} {{m|ms|mega}}, from {{etyl|sa|id}} {{m|sa|मेघ||cloud|tr=megha}}.
+From {{inh|id|ms|mega}}, from {{der|id|sa|मेघ|t=cloud}}.
 
 ===Noun===
 {{id-noun}}
@@ -178,11 +177,11 @@ From {{etyl|ms|id}} {{m|ms|mega}}, from {{etyl|sa|id}} {{m|sa|मेघ||cloud|t
 
 ==Malay==
 
-===Etymology===
-From {{etyl|sa|ms}} {{m|sa|मेघ||cloud}}.
-
 ===Alternative forms===
-* {{l|ms|ميݢ|sc=Arab}}
+* {{l|ms|ميݢ}}
+
+===Etymology===
+From {{der|ms|sa|मेघ|t=cloud}}.
 
 ===Pronunciation===
 * {{a|Johor-Selangor}} {{IPA|/meɡə/|lang=ms}}
@@ -195,7 +194,7 @@ From {{etyl|sa|ms}} {{m|sa|मेघ||cloud}}.
 # [[cloud]] {{gloss|visible mass of water droplets suspended in the air}}
 
 ====Synonyms====
-* {{l|ms|awan}} / {{l|ms|اون|sc=Arab}}
+* {{l|ms|awan}} / {{l|ms|اون}}
 
 ----
 
