t+fi:[[mega-]] t-balance t+fi:[[jättiläis-]] ([[WT:EDIT|Assisted]]) <mega#46966629>

--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -22,6 +22,7 @@ From the prefix {{m|en|mega-}}, from {{der|en|grc|μέγας|t=great, large, mig
 
 ====Translations====
 {{trans-top|very large}}
+* Finnish: {{t+|fi|mega-}}, {{t|fi|jättiläis-}}
 {{trans-mid}}
 * Greek: {{t+|el|μέγας|m}}
 {{trans-bottom}}
