--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -20,6 +20,7 @@ From 16th century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 
 =====Translations=====
 {{trans-top|a wager}}
+* Arabic: {{t|ar|رِهَان|m}}, {{t|ar|مُرَاهَنَة|f}}
 * Basque: {{t|eu|trabes}}
 * Bulgarian: {{t+|bg|бас}}, {{t+|bg|облог|m}}
 * Catalan: {{t+|ca|aposta|f}}
