/* Noun */ import transls from [[garden shears]], add fr <pruning shears#46996061>

--- a/en/p/pruning shears.856099.wikitext
+++ b/en/p/pruning shears.856099.wikitext
@@ -6,16 +6,18 @@
 
 # {{lb|en|plurale tantum}} A [[tool]] consisting of two [[blade]]s with [[bevel]] edges, connected by a [[pivot]], used for [[gardening]]
 
-====Translations====
-{{trans-top|a tool}}
-* Dutch: {{t+|nl|snoeischaar|m|f}}
-* Finnish: {{t+|fi|oksasakset|p}}, {{t+|fi|sekatöörit|p}}
-* Polish: {{t+|pl|sekator}}
-{{trans-mid}}
-* Russian: {{t+|ru|сека́тор|m}}
-* Swedish: {{t|sv|trädgårdssax|c}}, {{t+|sv|sekatör|c}}
-{{trans-bottom}}
-
 ====Synonyms====
 * [[garden shears]]
 * [[secateurs]]
+
+====Translations====
+{{trans-top|a tool}}
+* Dutch: {{t+|nl|snoeischaar|m|f}}
+* Finnish: {{t+|fi|oksasakset|p}}, {{t+|fi|sekatöörit|p}}, {{t|fi|puutarhasakset|p}}
+* French: {{t+|fr|sécateur|m}}
+* Norman: {{t|nrf|chîsieaux d'gardîn|m-p}} {{qualifier|Jersey}}
+{{trans-mid}}
+* Polish: {{t+|pl|sekator}}
+* Russian: {{t+|ru|сека́тор|m}}
+* Swedish: {{t|sv|trädgårdssax|c}}, {{t+|sv|sekatör|c}}
+{{trans-bottom}}
