--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -127,6 +127,9 @@ From {{etyl|la|en}} {{m|la|qua||in the capacity of}}.
 
 ==Italian==
 
+===Alternative forms===
+* {{l|it|quà}} {{qual|misspelling}}
+
 ===Etymology===
 From {{inh|it|VL.||*(ec)cu hac}}, from {{inh|it|la|eccum}} + {{m|la|hac}}.
 
@@ -138,7 +141,7 @@ From {{inh|it|VL.||*(ec)cu hac}}, from {{inh|it|la|eccum}} + {{m|la|hac}}.
 ===Adverb===
 {{it-adv}}
 
-# [[here]] (''relatively close to the speaker'') <!--can't remember whether this is true, or whether this applies to "qui" instead-->
+# [[here]] {{qualifier|relatively close to the speaker}} <!--can't remember whether this is true, or whether this applies to "qui" instead-->
 
 ====See also====
 * {{l|it|là}}
