--- a/en/c/competitivity.775531.wikitext
+++ b/en/c/competitivity.775531.wikitext
@@ -6,7 +6,7 @@
 ===Noun===
 {{en-noun|competitivities}}
 
-# [[competitiveness]]
+# {{lb|en|rare}} [[competitiveness]]
 #* '''1962''', "Britain's Export Trade with Canada. Canadian Studies in Economics: No. 12" (Review), Angus Maddison, ''The Economic Journal'', Vol. 72, No. 286. (Jun., 1962), pp. 395, URL: [http://links.jstor.org/sici?sici=0013-0133%28196206%2972%3A286%3C393%3ABETWCC%3E2.0.CO%3B2-4 JSTOR]
 #*: It would throw further light on the inter-relation of '''competitivity''' and growth if we had a similar structural analysis of British performance in a more slowly performing market.
 #* '''2000''', Sylvain Gandon and Yannis Michalakis, "Evolution of Parasite Virulence against Qualitative or Quantitative Host Resistance," ''Proceedings: Biological Sciences'', page 986, Vol. 267, No. 1447. (May 22, 2000), pp. 985-990, URL: [http://links.jstor.org/sici?sici=0962-8452%2820000522%29267%3A1447%3C985%3AEOPVAQ%3E2.0.CO%3B2-A JSTOR].
