updating anagrams <hairnets#47013669>

--- a/en/h/hairnets.746850.wikitext
+++ b/en/h/hairnets.746850.wikitext
@@ -6,4 +6,4 @@
 # {{plural of|hairnet|lang=en}}
 
 ===Anagrams===
-* {{anagrams|en|Tehranis|inearths|therians}}
+* {{anagrams|en|Isenhart|Tehranis|inearths|therians}}
