--- a/en/a/anarcho-capitalism.777039.wikitext
+++ b/en/a/anarcho-capitalism.777039.wikitext
@@ -24,7 +24,7 @@ From {{prefix|anarcho|capitalism|lang=en}}. Coined by {{w|Murray Rothbard}} in t
 *: Mandarin: {{t|cmn|無政府資本主義}}
 * Czech: {{t|cs|anarchokapitalismus}}
 * Danish: {{t|da|anarkokapitalisme}}
-* Dutch: {{t+|nl|anarchokapitalisme}}
+* Dutch: {{t+|nl|anarchokapitalisme|n}}
 * Esperanto: {{t|eo|anarki-kapitalismo}}
 * Estonian: {{t|et|anarhokapitalism}}
 * Finnish: {{t|fi|anarkokapitalismi}}
