--- a/en/r/Rayne.774571.wikitext
+++ b/en/r/Rayne.774571.wikitext
@@ -7,7 +7,7 @@
 {{en-proper noun}}
 
 # {{surname|from=given names|dot=}}, variant of [[Raine]].
-# {{given name|female}}.
+# {{given name|female|lang=en}}.
 
 ===Etymology 2===
 {{blend|River|Jayne|lang=en}}
