--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -5,7 +5,7 @@
 * {{a|UK}} {{IPA|/əm/|lang=en}}
 
 ===Etymology 1===
-From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative]], [[accusative]], and [[vocative]] forms of numerous [[Appendix:Latin second declension#Neuter|neuter]] {{etyl|la|en}} [[Appendix:Latin second declension#Neuter|second declension]] nouns.
+From the [[homographic]] [[w:Grammatical case|case]] endings of the [[Appendix:Glossary#nominative|nominative]], [[Appendix:Glossary#accusative|accusative]], and [[Appendix:Glossary#vocative|vocative]] forms of numerous [[Appendix:Latin second declension#Neuter|neuter]] {{etyl|la|en}} [[Appendix:Latin second declension#Neuter|second declension]] nouns.
 
 ====Suffix====
 {{head|en|suffix|plural|-a}}
