--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -76,6 +76,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * Italian: {{t+|it|tasso|m}}
 * Japanese: {{t|ja|アナグマ|tr=anaguma}}, {{t|ja|穴熊|tr=あなぐま, anaguma}}
 * Kalmyk: {{t|xal|зорхн}}
+* Kazakh: {{t|kk|борсық}}
 * Korean: {{t+|ko|오소리}}
 * Kumyk: {{t|kum|порсукъ|tr=porsuq}}
 * Kurdish:
