t+ja:[[数える]] ([[WT:EDIT|Assisted]]) <enumerate#47043249>

--- a/en/e/enumerate.34095.wikitext
+++ b/en/e/enumerate.34095.wikitext
@@ -37,6 +37,7 @@ From {{etyl|la|en}} {{m|la|enumerātus}} < {{m|la|enumerō}}.
 * Hungarian: {{t+|hu|megszámol}}, {{t+|hu|számlál}}
 * Ido: {{t+|io|enumerar}}
 {{trans-mid}}
+* Japanese: {{t+|ja|数える|tr=kazoeru}}
 * Polish: {{t|pl|odliczyć|pf}}, {{t|pl|odliczać|impf}}
 * Portuguese: {{t+|pt|enumerar}}
 * Russian: {{t+|ru|пересчи́тывать|impf|sc=Cyrl}}, {{t+|ru|пересчита́ть|pf|sc=Cyrl}}
