--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -242,7 +242,8 @@ From {{inh|dum|odt|ottar}}, from {{inh|dum|gem-pro|*utraz}}, from {{inh|dum|ine-
 From {{etyl|non|gmq-bot}} {{m|non|otr}}, from {{etyl|gem-pro|gmq-bot}} {{m|gem-pro|*utraz}}, from {{etyl|ine-pro|gmq-bot}} {{m|ine-pro|*udrós||water-animal, otter}}, from {{m|ine-pro|*wed-||water}}.
 
 ===Pronunciation===
-* {{ipa|[ʊ́tʰːəɾ]|[ótʰːəɾ]|lang=gmq-bot}}
+* {{ipa|[ʊ́tʰːe̞ɾ]|[ótʰːe̞ɾ]|lang=gmq-bot}}
+*: {{rhymes|e̞ɾ|lang=gmq-bot}}
 
 ===Noun===
 {{head|gmq-bot|noun|g=m}}
