--- a/en/b/bragging rights.856465.wikitext
+++ b/en/b/bragging rights.856465.wikitext
@@ -3,7 +3,7 @@
 ===Noun===
 {{en-plural noun}}
 
-# {{lb|en|idiomatic}} The [[prerogative]] to [[praise]] oneself for an [[accomplishment]] or for possession of a [[superior]] [[characteristic]].
+# {{lb|en|idiomatic}} The [[prerogative]] to [[praise]] oneself for a [[skill]] or [[accomplishment]].
 #* '''2013''', Delme Parfitt in ''Wales Online'', ''Cardiff City 1 - 0 Swansea City: Steven Caulker heads Bluebirds to South Wales derby win'' (3 November 2013)
 #*: It won't be remembered as a classic in the pantheon of great South Wales derbies, but nobody on the Cardiff City side of the divide will care as their team secured the first ever set of Premier League '''bragging rights''' in the Welsh capital.
 #* '''2008''', Andrea Sachs, "[http://www.time.com/time/magazine/article/0,9171,1820126,00.html Business books (review of ''How to Get Rich'' by Felix Dennis)]," ''Time'', 3 Jul.,
