added [[Category:English 2-syllable words]] using [[Help:Gadget-HotCat|HotCat]] <embay#47056921>

--- a/en/e/embay.802830.wikitext
+++ b/en/e/embay.802830.wikitext
@@ -28,3 +28,5 @@ From {{prefix|en|alt1=em|bay|lang=en}}.
 
 ===Anagrams===
 * {{anagrams|en|Mabey|abyme|beamy|maybe}}
+
+[[Category:English 2-syllable words]]
