/* Norwegian Nynorsk */ <rot#47072730>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -368,13 +368,13 @@ From {{inh|nb|non|rót}}, from {{inh|nb|gem-pro|*wrōts}}, from {{inh|nb|ine-pro
 ----
 
 ==Norwegian Nynorsk==
-{{wikipedia|lang=nn|røter}}
-
-===Etymology===
-From {{inh|nn|non|rót}}, from {{inh|nn|gem-pro|*wrōts}}, from {{inh|nn|ine-pro|*wréh₂ds}}. Akin to {{cog|en|root}}.
 
 ===Pronunciation===
 * {{IPA|/ruːt/|lang=no}}
+
+===Etymology 1===
+{{wikipedia|lang=nn|røter}}
+From {{inh|nn|non|rót}}, from {{inh|nn|gem-pro|*wrōts}}, from {{inh|nn|ine-pro|*wréh₂ds}}. Akin to {{cog|en|root}}.
 
 ===Noun===
 {{head|nn|noun|g=f|definite singular|rota|indefinite plural|røter|definite plural|røtene}}
@@ -387,6 +387,18 @@ From {{inh|nn|non|rót}}, from {{inh|nn|gem-pro|*wrōts}}, from {{inh|nn|ine-pro
 * {{l|nn|gulrot}}
 * {{l|nn|kvadratrot}}
 * {{l|nn|rotfrukt}}
+
+===Etymology 2===
+From {{inh|nn|non|rót}}
+
+===Noun===
+{{nn-noun-n1}}
+
+# a {{l|en|mess}}, {{l|en|untidiness}}, {{l|en|chaos}}
+#: ''Det er for mykje '''rot''' på loftet. Me må rydda.''
+#:: The attic is a '''mess'''. We have to tidy it up.
+#: ''Når me prøver å samarbeida med dei, blir det berre '''rot'''.''
+#:: When we try working with them, it just turns into '''chaos'''.
 
 ===References===
 * {{R:The Nynorsk Dictionary}}
