--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -336,7 +336,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * West Coast Bajau: {{t|bdr|menungal}}, {{t|bdr|ogok}}, {{t|bdr|bakas}}
 * West Frisian: {{t|fy|baarch|c}}
 * Wolof: {{t|wo|mbam-xuux|alt=mbam-xuux mi}}
-* Yay: {{t-needed|pcc}}
+* Bouyei: {{t-needed|pcc}}
 * Yiddish: {{t|yi|חזיר|tr=khazer|m}}, {{t|yi|כאַזער|m}}
 * Yup'ik: {{t|esu|sitiinkaq}}
 * Zazaki: {{t|zza|xoz}}, {{t|zza|xenzir}}
