--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -84,7 +84,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 * Georgian: {{t|ka|ჯოხი}}, {{t|ka|კვერთხი}}
 * German: {{t+|de|Stab|m}}
 * Greek: {{t+|el|ράβδος|f}}, {{t+|el|ραβδί|n}}
-* Hebrew: {{t+|he|מַקֵּל|m}}
+* Hebrew: {{t+|he|מקל|m|tr=makél}}, {{t+|he|מטה|m|tr=maté}}
 * Hungarian: {{t+|hu|bot}}, {{t+|hu|rúd}}
 * Ido: {{t+|io|bastono}}
 * Indonesian: {{t+|id|toya}}
@@ -150,6 +150,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 * Georgian: {{t+|ka|შტატი}}, {{t|ka|პერსონალი}}
 * German: {{t+|de|Belegschaft|f}}, {{t+|de|Personal|n}}, {{t+|de|Stab|m}}, {{t+|de|Mitarbeiter|m-p}}
 * Greek: {{t+|el|προσωπικό|n}}, {{t+|el|επιτελείο|n}}
+* Hebrew; {{t+|he|סגל|m|tr=ségel}}
 * Hungarian: {{t+|hu|személyzet}}
 * Icelandic: {{t|is|starfsfólk|n}}
 * Irish: {{t+|ga|foireann|f}}
@@ -183,6 +184,8 @@ Sense of "group of military officers that assists a commander" and similar meani
 
 {{trans-top|commanding officers}}
 * Czech: {{t|cs|štáb|m}}
+* German: {{t+|de|Stab|m}}
+* Hebrew: {{t+|he|מטה|m|maté}}
 {{trans-mid}}
 {{trans-bottom}}
 
