--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -150,7 +150,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 * Georgian: {{t+|ka|შტატი}}, {{t|ka|პერსონალი}}
 * German: {{t+|de|Belegschaft|f}}, {{t+|de|Personal|n}}, {{t+|de|Stab|m}}, {{t+|de|Mitarbeiter|m-p}}
 * Greek: {{t+|el|προσωπικό|n}}, {{t+|el|επιτελείο|n}}
-* Hebrew; {{t+|he|סגל|m|tr=ségel}}
+* Hebrew: {{t+|he|סגל|m|tr=ségel}}
 * Hungarian: {{t+|hu|személyzet}}
 * Icelandic: {{t|is|starfsfólk|n}}
 * Irish: {{t+|ga|foireann|f}}
