--- a/en/m/mundo.4430.wikitext
+++ b/en/m/mundo.4430.wikitext
@@ -179,3 +179,18 @@ From {{etyl|la|es}} {{m|la|mundus||world}}.
 * {{R:DRAE 2001}}
 
 [[Category:Spanish basic words]]
+
+----
+
+==Tagalog==
+
+===Etymology===
+From {{etyl|es|tl}} {{m|es|mundo||world}}.
+
+===Noun===
+{{tl-noun}}
+
+# [[world]]; the [[earth]]
+
+====Synonyms====
+* {{l|tl|daigdig}}
